# robot-controller

./: README.md
robot-api/: Dockerfile  README.md  pyproject.toml  run.py
robot-api/app/: main.py  settings.py
robot-api/app/controllers/: __init__.py  base.py  mock_robot_controller.py
robot-api/app/routers/: __init__.py  robot_router.py
robot-api/app/services/: __init__.py  robot_service.py
robot-client/: Dockerfile  README.md  package-lock.json  package.json
robot-client/src/: api-calls.js  const.js
robot-client/src/app/: layout.js  page.js
