[project]
name = "robot-api"
version = "0.1.0"
description = ""
authors = [
    {name = "maciejSamerdak",email = "sam.maciej@interia.pl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.115.12)",
    "pydantic (==2.11.4)",
    "pydantic-settings (==2.9.1)",
    "uvicorn (==0.34.2)",
    "numpy (==2.2.5)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
